# python-test

./: pyproject.toml  setup.cfg  setup.py
anyprint.egg-info/: PKG-INFO  SOURCES.txt
test.egg-info/: PKG-INFO  SOURCES.txt
