[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]
name = 'test'

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm